--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,9 @@
             <url>https://m2.dv8tion.net/releases</url>
         </repository>
         <repository>
-            <id>central</id>
-            <name>bintray</name>
-            <url>https://jcenter.bintray.com</url>
+            <id>m2-chew-releases</id>
+            <name>Maven Chewtral</name>
+            <url>https://m2.chew.pro/releases</url>
         </repository>
         <repository>
             <id>jitpack.io</id>
@@ -28,7 +28,7 @@
         <repository>
             <id>m2.duncte123.dev</id>
             <name>m2-duncte123</name>
-            <url>https://m2.duncte123.dev/releases</url>
+            <url>https://m2.duncte123.dev/snapshots</url>
         </repository>
         <repository>
             <id>arbjergDev</id>
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>com.jagrosh</groupId>
             <artifactId>jda-utilities</artifactId>
-            <version>3.0.5</version>
+            <version>3.1.0</version>
             <type>pom</type>
         </dependency>
 
@@ -62,17 +62,16 @@
             <artifactId>common</artifactId>
             <version>1.7.0</version>
         </dependency>
-	<dependency>
-	    <groupId>com.github.jagrosh</groupId>
-	    <artifactId>JLyrics</artifactId>
-	    <version>master-SNAPSHOT</version>
-	</dependency>
+    	<dependency>
+	        <groupId>com.github.jagrosh</groupId>
+	        <artifactId>JLyrics</artifactId>
+	        <version>master-SNAPSHOT</version>
+	    </dependency>
         <dependency>
             <groupId>com.dunctebot</groupId>
             <artifactId>sourcemanagers</artifactId>
-            <version>1.9.0</version>
+            <version>1.7.1-beta.1</version>
         </dependency>
-
         <!-- Misc Internal Dependencies -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
