--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
             <name>m2-dv8tion</name>
             <url>https://m2.dv8tion.net/releases</url>
         </repository>
-        <repository>
-            <id>m2-chew-releases</id>
-            <name>Maven Chewtral</name>
-            <url>https://m2.chew.pro/releases</url>
-        </repository>
+<repository>
+   <id>AddWhateverIdYouWant</id>
+   <name>SameHere</name>
+   <url>https://dl.cloudsmith.io/public/arcane/archive/maven/</url>
+</repository>
         <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
@@ -31,9 +31,9 @@
             <url>https://m2.duncte123.dev/snapshots</url>
         </repository>
         <repository>
-            <id>AddWhateverIdYouWant</id>
-            <name>SameHere</name>
-            <url>https://dl.cloudsmith.io/public/arcane/archive/maven/</url>
+            <id>arbjergDev</id>
+            <name>Lavalink Repository</name>
+            <url>https://maven.lavalink.dev/releases</url>
         </repository>
     </repositories>
 
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>com.jagrosh</groupId>
             <artifactId>jda-utilities</artifactId>
-            <version>3.1.0</version>
+            <version>3.0.5</version>
             <type>pom</type>
         </dependency>
 
