--- a/pom.xml
+++ b/pom.xml
@@ -3,20 +3,20 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.jagrosh</groupId>
     <artifactId>JMusicBot</artifactId>
-    <version>Snapshot</version>
+    <version>0.4.3.2</version>
     <packaging>jar</packaging>
 
     <repositories>
         <repository>
-            <id>dv8tion</id>
-            <name>m2-dv8tion</name>
-            <url>https://m2.dv8tion.net/releases</url>
+            <id>chew</id>
+            <name>m2-chew</name>
+            <url>https://m2.chew.pro/releases</url>
         </repository>
-<repository>
-   <id>AddWhateverIdYouWant</id>
-   <name>SameHere</name>
-   <url>https://dl.cloudsmith.io/public/arcane/archive/maven/</url>
-</repository>
+        <repository>
+            <id>central</id>
+            <name>bintray</name>
+            <url>https://jcenter.bintray.com</url>
+        </repository>
         <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
@@ -28,12 +28,17 @@
         <repository>
             <id>m2.duncte123.dev</id>
             <name>m2-duncte123</name>
-            <url>https://m2.duncte123.dev/snapshots</url>
+            <url>https://m2.duncte123.dev/releases</url>
         </repository>
         <repository>
             <id>arbjergDev</id>
             <name>Lavalink Repository</name>
             <url>https://maven.lavalink.dev/releases</url>
+        </repository>
+        <repository>
+            <id>AddWhateverIdYouWant</id>
+            <name>SameHere</name>
+            <url>https://dl.cloudsmith.io/public/arcane/archive/maven/</url>
         </repository>
     </repositories>
 
@@ -42,41 +47,55 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>4.4.1_353</version>
+            <version>5.6.1</version>
         </dependency>
         <dependency>
-            <groupId>com.jagrosh</groupId>
-            <artifactId>jda-utilities</artifactId>
-            <version>3.0.5</version>
+            <groupId>pw.chew</groupId>
+            <artifactId>jda-chewtils</artifactId>
+            <version>2.1</version>
+            <scope>compile</scope>
             <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>pw.chew</groupId>
+            <artifactId>jda-chewtils-command</artifactId>
+            <version>2.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>pw.chew</groupId>
+            <artifactId>jda-chewtils-examples</artifactId>
+            <version>2.1</version>
+            <scope>compile</scope>
         </dependency>
 
         <!-- Music Dependencies -->
         <dependency>
             <groupId>dev.arbjerg</groupId>
             <artifactId>lavaplayer</artifactId>
-            <version>2.2.2</version>
+            <version>2.2.4</version>
         </dependency>
         <dependency>
             <groupId>dev.lavalink.youtube</groupId>
             <artifactId>common</artifactId>
-            <version>1.7.0</version>
+            <version>1.13.5</version>
         </dependency>
-    	<dependency>
-	        <groupId>com.github.jagrosh</groupId>
-	        <artifactId>JLyrics</artifactId>
-	        <version>master-SNAPSHOT</version>
-	    </dependency>
+	<dependency>
+	    <groupId>com.github.jagrosh</groupId>
+	    <artifactId>JLyrics</artifactId>
+	    <version>master-SNAPSHOT</version>
+	</dependency>
         <dependency>
             <groupId>com.dunctebot</groupId>
             <artifactId>sourcemanagers</artifactId>
-            <version>1.7.1-beta.1</version>
+            <version>1.9.0</version>
         </dependency>
+
         <!-- Misc Internal Dependencies -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.13</version>
+            <version>1.5.18</version>
         </dependency>
         <dependency>
             <groupId>com.typesafe</groupId>
